Fix path parameter in swagger for attachments
